# msfinance

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.md
example/: get_sp500.py
examples/: get_hsi.py  get_sp500.mp.py  get_sp500.multithread.py  get_sp500.py  get_xnas.py  get_xnys.py  get_xshg.py  get_xtai.py
msFinance/: stocks.py  unitTest.py
msfinance/: __init__.py  stocks.py  unit_test.py
tests/: test_stocks.py
