[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "msfinance"
version = "0.4.0"
authors = [
    { name = "Jimmy Situ", email = "web@jimmystone.com"}
]
description = "msfinance offers Pythonic way to download stocks financial data from morningstar.com"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "xlrd",
    "lxml",
    "requests",
    "pandas",
    "tenacity",
    "selenium",
    "sqlalchemy",
    "fake-useragent<2.0.0",
    "selenium-stealth",
    "undetected-chromedriver",
    "webdriver-manager"
]

[project.urls]
"Homepage" = "https://github.com/jimmysitu/msfinance"
"Bug Tracker" = "https://github.com/jimmysitu/msfinance/issues"
